[package]
name = "sandbox-ipc"
version = "0.5.0"
edition = "2018"

[dependencies]
sandbox-ipc-core = { path = "sandbox-ipc-core" }
sandbox-ipc-serde = { path = "sandbox-ipc-serde" }

[workspace]
members = ["sandbox-ipc-core", "sandbox-ipc-serde", "sandbox-ipc-test"]

[patch.crates-io]
compio-core = { path = "../compio/compio-core" }
compio-ipc = { path = "../compio/compio-ipc" }
compio = { path = "../compio" }
mach-core = { path = "../machapi/mach-core" }
mach-port = { path = "../machapi/mach-port" }
mach-sys = { path = "../machapi/mach-sys" }
