cargo-features = ["rename-dependency"]

[package]
name = "sandbox-ipc-core"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
uuid = { version = "0.6", features = ["v4", "serde"] }
rand = "0.5"
lazy_static = "1"

serde = { version = "1", features = ["rc"] }
serde_derive = "1"
bincode = "1"
byteorder = "1.2"

futures_core = { package = "futures-core-preview", version = "0.3.0-alpha.9" }
futures_util = { package = "futures-util-preview", version = "0.3.0-alpha.9" }
compio-core = "0.1"
compio-ipc = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "ntdef", "guiddef", "winsock2", "namedpipeapi", "ioapiset", "memoryapi", "sysinfoapi", "synchapi"] }
winhandle = "0.3"
widestring = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json = "1"
compio = "0.1"
tempfile = "3.0"