cargo-features = ["rename-dependency"]

[package]
name = "sandbox-ipc-serde"
version = "0.1.0"
edition = "2018"

[dependencies]
sandbox-ipc-core = { path = "../sandbox-ipc-core" }

serde = "1.0"
bincode = "1.0"

futures_core = { package = "futures-core-preview", version = "0.3.0-alpha.9" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.44"

[dev-dependencies]
sandbox-ipc-test = { path = "../sandbox-ipc-test" }

serde_json = "1"
compio = "0.1"
tempfile = "3.0"

[[test]]
name = "send_file"
harness = false